# furze

./: .gitignore  Cargo.toml  README.md  bindings.h  build.rs  go.mod
example/simple/: Cargo.toml
example/simple/src/: main.rs
example/simple2/: Cargo.toml
example/simple2/src/: lib.rs
ffi/: bindings.h
ffi/src/: ffi.rs
gofst/: builder.go  builder_test.go  ffi.h  go.mod  gofst.go
gofst/cmd/: main.go
pkg/mod/cache/download/golang.org/x/tools/gopls/@v/: v0.8.1.info
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.8.1
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x037/: 493
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x037/620.p/: 170
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x037/819.p/: 84
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/146.p/: 244
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/147.p/: 187
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/2/000.p/: 146  147
pkg/sumdb/sum.golang.org/: latest
src/: builder.rs  bytes.rs  decoder.rs  encoder.rs  error.rs  ffi.rs  fst.rs  lib.rs  main.rs  state.rs
tests/: Cargo.toml
tests/src/: lib.rs
