[package]
name = "furze"
version = "0.0.1"
edition = "2021"
authors = ["Walter Wu <895340293@qq.com>"]
description = "finite state transducers (fst) writen in rust"
license = "MIT"
homepage = "https://github.com/szuwgh/furze"
repository = "https://github.com/szuwgh/furze"
keywords = ["searchengine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
thiserror = "1.0"


