[package]
name = "furze"
version = "0.0.5"
edition = "2021"
authors = ["Walter Wu <895340293@qq.com>"]
description = "finite state transducers (fst) writen in rust"
license = "MIT"
homepage = "https://github.com/szuwgh/furze"
repository = "https://github.com/szuwgh/furze"
keywords = ["searchengine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
thiserror = "1.0"
varintrs = "0.2.1"
byteorder = "1.4.3"


